--- a/Main.html
+++ b/Main.html
@@ -25,7 +25,7 @@
         </header>
 
         <section id="qui">
-            <h2 id="moi">Je suis Narty</h2>
+            <h2 id="moi">Je suis <div>Narty</div></h2>
         </section>
         
         
