--- a/Index.html
+++ b/Index.html
@@ -25,7 +25,7 @@
         </header>
 
         <section id="qui">
-            <h2 id="moi">Je suis <span>Narty</span></h2>
+            <h2 id="moi">Je suis <span>NARTY</span></h2>
         </section>
         
         
