--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
         </header>
 
         <section id="qui">
-            <h2 id="moi">Je suis <span>NARTY</span></h2>
+            <h2 id="moi">Je suis <span>NARTY</span> :</h2>
+            <ul>
+                <li><p>Une chaine Youtube : <a class="aa" href="https://www.youtube.com/channel/UCeVpczgB6sovS-Cf-Q_Eu-Q" target="_blank">Narty</a></p> </li>
+            </ul>
         </section>
         
         
