--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <h2 id="moi">Je suis <span>NARTY</span> :</h2>
             <ul>
                 <li><p>Une chaine Youtube : <a class="aa" href="https://www.youtube.com/channel/UCeVpczgB6sovS-Cf-Q_Eu-Q" target="_blank">Narty</a></p> </li>
+                <li><p>Une chaine Twitch : <a class="aa" href="https://www.youtube.com/channel/UCeVpczgB6sovS-Cf-Q_Eu-Q" target="_blank">Narty_video</a></p> </li>
             </ul>
         </section>
         
