--- a/Games.html
+++ b/Games.html
@@ -36,7 +36,7 @@
                     <br/>
                     <br/>
                     <br/>
-                    <p class="install">Mes packs de textures : <a href="https://mega.nz/file/ZMd1HbTR#3bwaXffs798P8ARugYM372Nhk15PCsjOUsNnqDFQsNc" title="wow">ICI</a></p>
+                    <p class="install">Mes packs de textures : <a href="https://mega.nz/file/ZMd1HbTR#3bwaXffs798P8ARugYM372Nhk15PCsjOUsNnqDFQsNc" title="wow" target="_blank">ICI</a></p>
                 </div>
             </div>
         </section>
